
@startuml der-tpi;
' ER diagram
!define table(x) class x << (T,#FFAAAA) >>
hide methods
hide stereotypes

table(Client) {
  + client_id : BIGINT <<PK>>
  --
  name : VARCHAR(200)
  document : VARCHAR(50)
  phone : VARCHAR(50)
  email : VARCHAR(100)
  created_at : DATETIME
  updated_at : DATETIME
}

table(Container) {
  + container_id : BIGINT <<PK>>
  --
  code : VARCHAR(50)   'identificación única del contenedor
  weight_kg : DECIMAL(10,2)
  volume_m3 : DECIMAL(10,3)
  status : VARCHAR(50) 'e.g. BORRADOR, PROGRAMADA, EN_TRANSITO, ENTREGADA
  client_id : BIGINT <<FK>>
  created_at : DATETIME
  updated_at : DATETIME
}

table(Truck) {
  + truck_id : BIGINT <<PK>>
  --
  plate : VARCHAR(20)
  driver_name : VARCHAR(150)
  driver_phone : VARCHAR(50)
  max_weight_kg : DECIMAL(12,2)
  max_volume_m3 : DECIMAL(12,3)
  fuel_consumption_l_per_km : DECIMAL(6,4)
  cost_per_km : DECIMAL(10,2)
  available : BOOLEAN
  created_at : DATETIME
}

table(Depot) {
  + depot_id : BIGINT <<PK>>
  --
  name : VARCHAR(150)
  address : VARCHAR(300)
  latitude : DECIMAL(10,7)
  longitude : DECIMAL(10,7)
  daily_storage_cost : DECIMAL(10,2)
  created_at : DATETIME
}

table(Request) {
  + request_id : BIGINT <<PK>>
  --
  request_number : VARCHAR(50) UNIQUE
  container_id : BIGINT <<FK>>
  client_id : BIGINT <<FK>>
  status : VARCHAR(50) 'BORRADOR, PROGRAMADA, EN_TRANSITO, ENTREGADA
  estimated_cost : DECIMAL(12,2)
  estimated_time_min : INT
  final_cost : DECIMAL(12,2)
  actual_time_min : INT
  created_at : DATETIME
  updated_at : DATETIME
}

table(Route) {
  + route_id : BIGINT <<PK>>
  --
  request_id : BIGINT <<FK>>
  total_tramos : INT
  total_depots : INT
  total_distance_km : DECIMAL(10,2)
  estimated_time_min : INT
  estimated_cost : DECIMAL(12,2)
  created_at : DATETIME
}

table(Segment) {
  + segment_id : BIGINT <<PK>>
  --
  route_id : BIGINT <<FK>>
  origin_type : VARCHAR(30) 'ORIGEN, DEPOT, DESTINO
  origin_lat : DECIMAL(10,7)
  origin_lng : DECIMAL(10,7)
  dest_lat : DECIMAL(10,7)
  dest_lng : DECIMAL(10,7)
  segment_type : VARCHAR(50) 'ORIGEN-DEP, DEP-DEP, DEP-DEST, ORIGEN-DEST
  status : VARCHAR(30) 'ESTIMADO, ASIGNADO, INICIADO, FINALIZADO
  estimated_distance_km : DECIMAL(10,2)
  estimated_time_min : INT
  estimated_cost : DECIMAL(12,2)
  actual_distance_km : DECIMAL(10,2)
  actual_time_min : INT
  actual_cost : DECIMAL(12,2)
  start_time : DATETIME
  end_time : DATETIME
  truck_id : BIGINT <<FK>>
}

table(Tariff) {
  + tariff_id : BIGINT <<PK>>
  --
  name : VARCHAR(150)
  base_cost_per_km : DECIMAL(10,2)
  volume_range_min : DECIMAL(10,3)
  volume_range_max : DECIMAL(10,3)
  weight_range_min : DECIMAL(10,2)
  weight_range_max : DECIMAL(10,2)
  storage_cost_per_day : DECIMAL(10,2)
  fuel_price_per_liter : DECIMAL(10,2)
  created_at : DATETIME
}

' Relationships
Client "1" -- "0..*" Container : owns
Client "1" -- "0..*" Request : places
Container "1" -- "0..1" Request : assigned_to
Request "1" -- "1..*" Route : has
Route "1" -- "1..*" Segment : composed_of
Truck "0..*" -- "0..*" Segment : assigned_to
Depot "0..*" -- "0..*" Segment : referenced_by

Container ..> Tariff : "uses for estimate (volume/weight bin)"

@enduml
